# mono

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  configure.ac  socket-interrupt.cs  socket-server.c  threadpool-bench.cs  webrequest.cs
data/: config.in
docs/: Makefile.am  docs.make
eglib/: CMakeLists.txt  Makefile.am
eglib/src/: .gitignore  CMakeLists.txt  Makefile.am  eglib-config.h.in  gstr.c
llvm/: Makefile.am  SUBMODULES.json  build.mk
mcs/: CMakeLists.txt  Makefile
mcs/class/: Makefile
mcs/class/Facades/: Makefile
mcs/class/I18N/: Makefile
mcs/class/Microsoft.Build.Engine/: Makefile
mcs/class/Mono.Compiler/Test/: ICompilerInterfaceTest.cs  MiniCompilerTest.cs
mcs/class/Mono.Debugger.Soft/: Makefile
mcs/class/Mono.Debugger.Soft/Test/: dtest-app.cs  dtest.cs
mcs/class/Mono.Options/: Makefile
mcs/class/Mono.Profiler.Log/Test/: ProfilerTestRun.cs
mcs/class/Mono.Security/: Makefile  mobile_Mono.Security.dll.sources  monodroid_Mono.Security.dll.sources  monotouch_Mono.Security.dll.sources
mcs/class/System/: Makefile  System.dll.sources  build_System.dll.sources  common.sources  common_networking.sources  corefx.unix.sources  darwin_System.dll.sources  darwin_net_4_x_System.dll.sources  linux_System.dll.sources  linux_net_4_x_System.dll.sources  mobile_System.dll.sources  net_4_x_System.dll.sources  win32_System.dll.sources  win32_net_4_x_System.dll.sources  xammac_net_4_5_System.dll.sources
mcs/class/System.Core/: Makefile
mcs/class/System.Core/System.IO.Pipes/: PipeStream.cs
mcs/class/System.ServiceModel/: Makefile
mcs/class/System.ServiceModel.Activation/: Makefile
mcs/class/System.Web/: Makefile  makefile.trace
mcs/class/System.Web.Extensions/: Makefile
mcs/class/System.Web.Http.WebHost/: Makefile
mcs/class/System.Web.Services/: Makefile
mcs/class/System.Windows.Forms/: Makefile
mcs/class/System.XML/: Makefile
mcs/class/System/corefx/: SR.cs  (+14 more)
mcs/class/aot-compiler/: Makefile
mcs/class/corlib/: Makefile  corlib-net_4_x.csproj  corlib.dll.sources
mcs/class/monodoc/: Makefile
mcs/class/reference-assemblies/: Makefile
mcs/errors/: Makefile
mcs/jay/: CMakeLists.txt
mcs/mcs/: Makefile  ikvm.cs
mcs/tests/: Makefile  ver-il-net_4_x.xml
mcs/tools/mdoc/: Makefile
mcs/tools/mono-service/: Makefile
mcs/tools/mono-shlib-cop/: Makefile
mcs/tools/mono-symbolicate/: Makefile
mcs/tools/monop/: Makefile
mcs/tools/security/: Makefile
mcs/tools/xbuild/: xbuild_test.make
mono/: CMakeLists.txt  Makefile.am
mono/btls/: CMakeLists.txt
mono/eglib/: goutput.c
mono/io-layer/: handles.c  io-layer.h  io.c  locking.c  posix.c  sockets.c  sockets.h  thread-private.h  wthreads.c
mono/metadata/: CMakeLists.txt  Makefile.am  android-ifaddrs.c  android.c  android.h  appdomain.c  assembly.c  attach.c  boehm-gc.c  class-internals.h  cominterop.c  console-unix.c  coree.c  coree.h  debug-helpers.c  domain-internals.h  domain.c  environment.c  fdhandle.c  fdhandle.h  file-io-unix.c  file-io.h  filewatcher.c  filewatcher.h  gc-internals.h  gc.c  handle-arena.h  handle-fwd.h  handle-private.h  handle.c  handle.h  icall-def.h  icall-define.h  icall.c  image.c  io-selector.c  locales.c  lock-tracer.c  marshal.c  metadata.c  (+69 more)
mono/mini/: CMakeLists.txt  Makefile.am.in  TestDriver.cs  aot-compiler.c  aot-runtime.c  branch-opts.c  debugger-agent.c  driver.c  exceptions-amd64.c  exceptions.cs  genmdesc.c  genmdesc.pl  helpers.c  iltests.il  image-writer.c  image-writer.h  jit-icalls.c  jit-icalls.h  method-to-ir.c  mini-amd64.c  mini-amd64.h  mini-arm.h  mini-arm64.h  mini-codegen.c  mini-darwin.c  mini-exceptions.c  mini-gc.c  mini-llvm.c  mini-posix.c  mini-runtime.c  mini-trampolines.c  mini-x86.c  mini.c  mini.h  regalloc.h  tasklets.c  test_op_il_seq_point.sh  trace.c
mono/pal/: .gitignore  Makefile.am
mono/profiler/: Makefile.am  decode.c  log-args.c  proflog.c  ptestrunner.pl
mono/sgen/: sgen-conf.h  sgen-debug.c  sgen-descriptor.h  sgen-gc.c  sgen-gc.h  sgen-marksweep-drain-gray-stack.h  sgen-marksweep-scan-object-concurrent.h  sgen-marksweep.c  sgen-memory-governor.c  sgen-minor-scan-object.h  sgen-nursery-allocator.c  sgen-protocol.c  sgen-scan-object.h  sgen-workers.c
mono/tests/: Makefile.am  bug-8477.il  libtest.c  pinvoke3.cs  runtime_test.cs  sleep-stw.cs  test-runner.cs  tests-config.in  thread-abort-wait.cs  threads-suspend.cs  unhandled-exception-1.cs  unhandled-exception-2.cs  unhandled-exception-3.cs  unhandled-exception-4.cs  unhandled-exception-5.cs  unhandled-exception-6.cs  unhandled-exception-7.cs
mono/tests/gc-descriptors/: Makefile.am
mono/tests/testing_gac/: Makefile.am
mono/tests/verifier/: Makefile.am
mono/unit-tests/: Makefile.am  test-conc-hashtable.c  test-mono-handle.c
mono/utils/: CMakeLists.txt  Makefile.am  checked-build.c  dlmalloc.c  file.c  file.h  hazard-pointer.c  hazard-pointer.h  lock-free-alloc.c  lock-free-alloc.h  lock-free-queue.h  mono-conc-hashtable.c  mono-conc-hashtable.h  mono-context.c  mono-context.h  mono-counters.c  mono-counters.h  mono-dl-darwin.c  mono-dl-posix.c  mono-dl.h  mono-error-internals.h  mono-error.c  mono-error.h  mono-log-common.c  mono-logger-internals.h  mono-merp.c  mono-mmap-internal.h  mono-mmap.c  mono-mmap.h  mono-os-semaphore.h  mono-poll.c  mono-rand.c  mono-state.c  mono-syscall-abort-mach.c  mono-syscall-abort-posix.c  mono-syscall-abort-windows.c  mono-threads-android.c  mono-threads-coop.c  mono-threads-freebsd.c  mono-threads-linux.c  (+19 more)
msvc/: libmonoruntime.vcxproj  libmonoruntime.vcxproj.filters  libmonoutils.vcxproj  mono.props  pedump.vcxproj  pedump.vcxproj.filters
msvc/scripts/: order.xml
runtime/: .gitignore  Makefile.am  mono-helix-wrapper.sh
scripts/ci/: run-jenkins.sh  run-test-default.sh  run-test-helix.sh
scripts/ci/pipeline/: pr-linux-x64.groovy
sdks/: versions.mk
sdks/android/: Makefile
sdks/android/managed/: fake-monodroid.cs
sdks/builds/: .gitignore  Makefile  android.mk  ios.mk  llvm.mk  mxe.mk  wasm.mk
tools/monograph/: monograph.c
tools/offsets-tool/: MonoAotOffsetsDumper.cs
(+130 files in other folders)
