
add_subdirectory(arch)
add_subdirectory(utils)
if(NOT INSTALL_MONOTOUCH)
  add_subdirectory(cil)
endif()
if(SUPPORT_SGEN)
  add_subdirectory(sgen)
endif()
add_subdirectory(metadata)
add_subdirectory(mini)
add_subdirectory(btls)
#add_subdirectory(tests)
#if(NOT INSTALL_MONOTOUCH)
#  add_subdirectory(dis)
#endif()
#add_subdirectory(profiler)
